add test forgot password request
